# ironcode

./: .gitignore  AGENTS.md  Cargo.toml  README.md
etc/: config.toml.example
prompts/: system.md
prompts/tools/: read_file.md  think.md
prompts/tools/ask_user/: ask_user_question.md
prompts/tools/file/: glob.md  grep.md  replace_string.md  write.md
prompts/tools/shell/: bash.md  powershell.md
prompts/tools/todo/: SetTodoList.md
prompts/tools/web/: FetchURL.md  SearchWeb.md
src/: app.rs  error.rs  main.rs
src/cli/: app.rs  args.rs  mod.rs  runtime.rs
src/config/: loader.rs  mod.rs
src/config/fixtures/: override_config.toml  test_config.toml
src/llm/: mod.rs  openai.rs  provider.rs  session.rs  types.rs
src/llm/providers/: kimi.rs  mod.rs
src/tools/: loader.rs  mod.rs
src/tools/handlers/: grep.rs  mod.rs  read_file.rs
src/tools/handlers/ask_user/: ask_user_question.rs  mod.rs
src/tools/handlers/file/: glob.rs  grep.rs  mod.rs  replace_string.rs  write.rs
src/tools/handlers/shell/: bash.rs  mod.rs  powershell.rs
src/tools/handlers/todo/: mod.rs  set_todo_list.rs
src/tools/handlers/web/: fetch_url.rs  mod.rs  search_web.rs
src/tui/: message.rs  message_broker.rs  mod.rs
src/utils/: animation.rs  colors.rs  mod.rs  style.rs
src/view/: chat.rs  home.rs  mod.rs
