[package]
name = "ironcode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.12"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures = "0.3.31"
chrono = "0.4.40"
log = "0.4.26"
env_logger = "0.11.7"
async-openai = { version = "0.33.0", features = ["chat-completion"] }
toml = "1.0.6"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.0", features = ["derive"] }
