[package]
name = "ironcode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.12"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
futures = "0.3.31"
chrono = "0.4.40"
log = "0.4.26"
env_logger = "0.11.7"
async-openai = { version = "0.33.0", features = ["chat-completion"] }
async-trait = "0.1"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false }
reqwest-eventsource = "0.6"
toml = "1.0.6"
dirs = "6.0.0"
shellexpand = "3.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
walkdir = "2"
glob = "0.3"
duckduckgo_search = "0.1.3"
readability = { version = "0.3.0", features = ["reqwest"] }
url = "2.5.8"
